--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                     <a href="https://github.com/RanaGaballah"><i class="fa-brands fa-github"></i></a>
                     
                 </div>
-                <a href="assets/resume.pdf" download class="btn btn2">Download CV</a>
+                <a href="assets/Rana_Gaballah_Resume.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form onsubmit="sendemail() ; reset(); return false;" >
