--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
                 <h1 class="sub-title">About me</h1>
                 <br>
                 <p>I am a <span>Senior</span> student in the faculty of computers and information Cairo university,
-                     I have acquired technical knowledge and skills from my course as well as practical and business skills.
-                      I have used a range of languages, operating systems and development tools as well as experiencing the system development life cycle.</p>
+                    with a strong background in backend development with
+                    <span>Laravel</span>, I bring academic experience in solid foundation and OOP. Currently working on the backend of Med
+                    Sync, a medical system encompassing both mobile app and website platforms.
+                    .</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')" >Skills</p>
@@ -73,43 +75,38 @@
                         <ul>
                             <li>
                                 <span>
-                                    Frontend Development 
-                                </span><br>HTML, CSS, JavaScript, Bootstrap
+                                    Laravel Framework 
+                                </span><br>Eloquent ORM | Middleware | RESTful APIs | Queues and Jobs | Blade Templating Engine
                             </li>
                             <li>
                                 <span>
-                                    Backend Development 
-                                </span><br>PHP, Laravel, Django
+                                    Database
+                                </span><br>SQL Server | MySQL
                             </li>
                             <li>
                                 <span>
                                     Software Development
-                                </span><br>SDLC, Testing
+                                </span><br>SOLID | SDLC | Design Patterns | MVC
                             </li>
                             <li>
                                 <span>
-                                    OOP
-                                </span><br>SOLID, design patterns
+                                    Techniques
+                                </span><br>OOP | Data Structures | Algorithms
                             </li>
                             <li>
                                 <span>
-                                    SQL
-                                </span><br>MySQL, Data Modelling, Data Wrangling
+                                   Deployment
+                                </span><br>azure | IIS Server
                             </li>
                             <li>
                                 <span>
-                                    PYTHON
-                                </span><br>Data Manipulation, Model Development and Evaluation, Problem Solving
+                                    Programming Languages
+                                </span><br>PHP | JavaScript | Python | C++
                             </li>
                             <li>
                                 <span>
-                                    Power BI
-                                </span><br>data visualization, reporting, business intelligence
-                            </li>
-                            <li>
-                                <span>
-                                   C++, C#, JAVA
-                                </span>
+                                   Version Control
+                                </span><br>Git | GitHub
                             </li>
 
                         </ul>
@@ -118,20 +115,14 @@
                         <ul>
                             <li>
                                 <span>
-                                    IEEE CUSB Ai Instructor                   
-                                </span><br> Sep 2022 - May 2023
+                                    Software Engineering Intern, FriendyCar                   
+                                </span><br> May 2023 - Aug 2023
                             </li>
                             <li>
                                 <span>
-                                    SCCI Media Production Member 
-                                </span><br>Sep 2021 - May 2022
+                                    Web Development Intern, CodeClause
+                                </span><br>Jan 2023 - Feb 2023
                             </li>
-                            <li>
-                                <span>
-                                    FriendyCar Sales specialist           
-                                </span><br>July 2021 - Aug 2021
-                            </li>
-
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
@@ -153,7 +144,7 @@
                             <li>
                                 <span>
                                     GPA
-                                </span><br>3.23
+                                </span><br>3.31
                             </li>
 
                         </ul>
